--- a/CollEng2/html/biblio.html
+++ b/CollEng2/html/biblio.html
@@ -7,27 +7,104 @@
     <script ENGINE="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+
+
+
+	
+
+<!-- меню -->
 <header class=".container">
 	<div>
 		<dl>
 			<ul>
-				<li><a href="">Курсы</a></li>
-				<li><a href="">Кинотеатр</a></li>
+				<li><a href="course.html">Курсы</a></li>
+				<li><a href="kino.html">Кинотеатр</a></li>
 			</ul>
 		</dl>
 		<dl>
 			<ul>
-				<li><a href="glavstranica.html"><img src="../img/colleng.png"></a></li>
+				<li><a href="glavstranica.html"><img src="..//img/colleng.png"></a></li>
 			</ul>
 		</dl>
 		<dl>
 			<ul>
-				<li><a href="">Мем-блог</a></li>
+				<li><a href="memes.html">Мем-блог</a></li>
 				<li><a href="biblio.html">Библиотека</a></li>
 			</ul>
 		</dl>
 	</div>
 </header>
+
+
+
+
+<!-- Каталог жанров -->
+<header class=".container">
+	<div>
+		<dl>
+			<ul>
+				<li><a href="course.html">Учебная</a></li>
+				<li><a href="kino.html">Бизнес</a></li>
+			</ul>
+		</dl>
+		<dl>
+	
+		</dl>
+		<dl>
+			<ul>
+				<li><a href="memes.html">Комиксы</a></li>
+				<li><a href="biblio.html">Фантастика</a></li>
+			</ul>
+		</dl>
+	</div>
+</header>
+<header class=".container">
+	<div>
+		<dl>
+			<ul>
+				<li><a href="course.html">Саморазвитие</a></li>
+				<li><a href="kino.html">Поэзия</a></li>
+			</ul>
+		</dl>
+		<dl>
+	
+		</dl>
+		<dl>
+			<ul>
+				<li><a href="memes.html">Детективы</a></li>
+				<li><a href="biblio.html">Детская</a></li>
+			</ul>
+		</dl>
+	</div>
+</header>
+<header class=".container">
+	<div>
+		<dl>
+			<ul>
+				<li><a href="course.html">Компьютерная</a></li>
+				<li><a href="kino.html">Наука</a></li>
+			</ul>
+		</dl>
+		<dl>
+	
+		</dl>
+		<dl>
+			<ul>
+				<li><a href="memes.html">Документальная</a></li>
+				<li><a href="biblio.html">Юмор</a></li>
+			</ul>
+		</dl>
+	</div>
+</header>
+
+</head>
+
+  
+
+
+
+
+
 
 
 </body>
